# History-Dispatcher

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  config.example.toml  pyproject.toml
.github/workflows/: tests.yml
files/history-dispatcher@H234598/: applet.js  metadata.json  settings-schema.json
history_dispatcher/: __init__.py  cli.py  collector.py  config.py  crypto.py  migration.py  protocol.py  service.py  sources.py  store.py  systemd.py
reports/: isolated-cinnamon-2026-07-10.md
scripts/: install_cinnamon_applet.py  run_isolated_cinnamon_applet.py
tests/: test_applet.py  test_collector.py  test_core.py  test_systemd.py
