[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "history-dispatcher"
version = "0.1.3"
description = "Standalone encrypted history collection and dispatch service"
requires-python = ">=3.13"
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
dev = ["pytest>=8", "build"]

[project.scripts]
history-dispatcher = "history_dispatcher.cli:main"

[tool.setuptools.packages.find]
include = ["history_dispatcher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
